# esp32-qmk

./: .gitignore  README.md
firmware/esp32-qmk/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/esp32-qmk/main/: CMakeLists.txt
firmware/esp32-qmk/main/ap/: ap.cpp
firmware/esp32-qmk/main/ap/modules/qmk/: qmk.c
firmware/esp32-qmk/main/ap/modules/qmk/keyboards/baram/45k/: config.h
firmware/esp32-qmk/main/ap/modules/qmk/port/: matrix.c
firmware/esp32-qmk/main/common/hw/include/: keys.h
firmware/esp32-qmk/main/hw/: hw.c  hw.h  hw_def.h
firmware/esp32-qmk/main/hw/driver/: battery.c  eeprom.c  keys.c  uart.c
firmware/esp32-qmk/main/hw/driver/ble/: ble.c  ble_hid.c
firmware/esp32-qmk/main/hw/driver/ble/driver/: esp_hid_gap.c
firmware/esp32-qmk/main/hw/driver/usb/: usb.c  usb.h
firmware/esp32-qmk/main/hw/driver/usb/usb_hid/: usbd_hid.c  usbd_hid.h
